--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="mode__full-page light">
+<html class="mode__full-page light splash-screen">
   <!--
     Hello! Thanks for showing interest in our code.
     Interested in joining our team? To learn more, email us:
@@ -31,8 +31,9 @@
       type="font/woff2"
     />
   </head>
-  <body>
+  <body class="splash-screen">
     <div id="app"></div>
+    <script src="/assets/splash-screen.js"></script>
     <script src="browser-polyfill.js"></script>
   </body>
 </html>
