--- a/public/html/popup.html
+++ b/public/html/popup.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html class="mode__popup light">
+<html class="mode__popup light splash-screen">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/assets/base.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="splash-screen">
     <div id="app"></div>
+    <script src="/assets/splash-screen.js"></script>
     <script src="browser-polyfill.js"></script>
   </body>
 </html>
